testdata/typechecker/ok/Div.java
int main() {
	    int x;
        x = 123 / 4;
		return 0;
}

